add camera component add onDelayedStart() event to components add a default acmera and ability to switch cameras to Scene

--- a/xygine/src/CMakeLists.txt
+++ b/xygine/src/CMakeLists.txt
@@ -6,6 +6,7 @@ set(xygine_SRC
   ${xygine_DIR}/AudioManager.cpp
   ${xygine_DIR}/CommandQueue.cpp
   ${xygine_DIR}/Component.cpp
+  ${xygine_DIR}/ComponentCamera.cpp
   ${xygine_DIR}/Entity.cpp
   ${xygine_DIR}/FileSystem.cpp
   ${xygine_DIR}/FontResource.cpp
