add constant force affector to physics

--- a/xygine/xygine.vcxproj
+++ b/xygine/xygine.vcxproj
@@ -82,6 +82,7 @@
     <ClCompile Include="src\App.cpp" />
     <ClCompile Include="src\AudioManager.cpp" />
     <ClCompile Include="src\ComponentCamera.cpp" />
+    <ClCompile Include="src\PhysicsAffectorConstantForce.cpp" />
     <ClCompile Include="src\PhysicsCollisionEdgeShape.cpp" />
     <ClCompile Include="src\PhysicsCollisionCircleShape.cpp" />
     <ClCompile Include="src\PhysicsCollisionPolygonShape.cpp" />
@@ -154,6 +155,8 @@
     <ClInclude Include="include\xygine\Particle.hpp" />
     <ClInclude Include="include\xygine\ParticleController.hpp" />
     <ClInclude Include="include\xygine\ParticleSystem.hpp" />
+    <ClInclude Include="include\xygine\physics\Affector.hpp" />
+    <ClInclude Include="include\xygine\physics\AffectorConstantForce.hpp" />
     <ClInclude Include="include\xygine\physics\CollisionCircleShape.hpp" />
     <ClInclude Include="include\xygine\physics\CollisionEdgeShape.hpp" />
     <ClInclude Include="include\xygine\physics\CollisionPolygonShape.hpp" />
