add area force affector move force affectors to shapes rather than bodies

--- a/xygine/src/CMakeLists.txt
+++ b/xygine/src/CMakeLists.txt
@@ -14,6 +14,7 @@ set(xygine_SRC
   ${xygine_DIR}/Music.cpp
   ${xygine_DIR}/ParticleController.cpp
   ${xygine_DIR}/ParticleSystem.cpp
+  ${xygine_DIR}/PhysicsAffectorAreaForce.cpp
   ${xygine_DIR}/PhysicsAffectorConstantForce.cpp
   ${xygine_DIR}/PhysicsCollisionShape.cpp
   ${xygine_DIR}/PhysicsCollisionCircleShape.cpp
