add object pool class for managing frequently created / destroyed objects add filesystem function for getting file names from paths add file/line reporting to debug logging

--- a/Example/Example.vcxproj
+++ b/Example/Example.vcxproj
@@ -77,6 +77,7 @@
     <ClInclude Include="include\ParticleDemoState.hpp" />
     <ClInclude Include="include\PhysicsDemoState.hpp" />
     <ClInclude Include="include\StateIds.hpp" />
+    <ClInclude Include="include\TimedDestruction.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Game.cpp" />
