--- a/Example/Example.vcxproj.filters
+++ b/Example/Example.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="include\PhysicsDemoState.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\TimedDestruction.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Game.cpp">
