--- a/Example/CMakeLists.txt
+++ b/Example/CMakeLists.txt
@@ -18,7 +18,7 @@ if(CMAKE_COMPILER_IS_GNUCXX)
   endif()
 endif()
 
-SET (CMAKE_CXX_FLAGS_DEBUG "-g -_DEBUG_")
+SET (CMAKE_CXX_FLAGS_DEBUG "-g -D_DEBUG_")
 SET (CMAKE_CXX_FLAGS_RELEASE "-O4 -DNDEBUG")
 
 if(xygine_example_STATIC_SFML)
