--- a/xygine/xygine.vcxproj.filters
+++ b/xygine/xygine.vcxproj.filters
@@ -102,9 +102,6 @@
     <ClCompile Include="src\StateStack.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Affectors.cpp">
-      <Filter>Source Files\particles</Filter>
-    </ClCompile>
     <ClCompile Include="src\PhysicsRigidBody.cpp">
       <Filter>Source Files\physics</Filter>
     </ClCompile>
@@ -225,11 +222,11 @@
     <ClCompile Include="src\ComponentAudioSource.cpp">
       <Filter>Source Files\components</Filter>
     </ClCompile>
+    <ClCompile Include="src\ParticleAffectors.cpp">
+      <Filter>Source Files\particles</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\xygine\Affectors.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="include\xygine\App.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -454,6 +451,9 @@
     </ClInclude>
     <ClInclude Include="include\xygine\detail\ObjectPool.hpp">
       <Filter>Header Files\detail</Filter>
+    </ClInclude>
+    <ClInclude Include="include\xygine\ParticleAffectors.hpp">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
