--- a/Example/Example.vcxproj.filters
+++ b/Example/Example.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClInclude Include="include\RacingDemoTrack.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\RacingDemoPlayer.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\CommandIds.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Game.cpp">
@@ -69,6 +75,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\RacingDemoTrack.cpp">
+      <Filter>Source Files\racing demo</Filter>
+    </ClCompile>
+    <ClCompile Include="src\RacingDemoPlayer.cpp">
       <Filter>Source Files\racing demo</Filter>
     </ClCompile>
   </ItemGroup>
