add getMouseWorldPosition to App class add namespaces for example demos add player input control to physics demo

--- a/Example/CMakeLists.txt
+++ b/Example/CMakeLists.txt
@@ -57,6 +57,7 @@ SET(EXAMPLE_SRC
   src/MenuMainState.cpp
   src/MenuOptionState.cpp
   src/ParticleDemoState.cpp
+  src/PhysicsDemoInputController.cpp
   src/PhysicsDemoState.cpp
   src/RacingDemoPlayer.cpp
   src/RacingDemoState.cpp
