--- a/Example/Example.vcxproj
+++ b/Example/Example.vcxproj
@@ -76,6 +76,7 @@
     <ClInclude Include="include\MenuMainState.hpp" />
     <ClInclude Include="include\MenuOptionState.hpp" />
     <ClInclude Include="include\ParticleDemoState.hpp" />
+    <ClInclude Include="include\PhysicsDemoInputController.hpp" />
     <ClInclude Include="include\PhysicsDemoState.hpp" />
     <ClInclude Include="include\RacingDemoPlayer.hpp" />
     <ClInclude Include="include\RacingDemoState.hpp" />
@@ -89,6 +90,7 @@
     <ClCompile Include="src\MenuMainState.cpp" />
     <ClCompile Include="src\MenuOptionState.cpp" />
     <ClCompile Include="src\ParticleDemoState.cpp" />
+    <ClCompile Include="src\PhysicsDemoInputController.cpp" />
     <ClCompile Include="src\PhysicsDemoState.cpp" />
     <ClCompile Include="src\RacingDemoPlayer.cpp" />
     <ClCompile Include="src\RacingDemoState.cpp" />
